landing page , home page view update

--- a/9ecomv3/src/pages/welcome/welcome.html
+++ b/9ecomv3/src/pages/welcome/welcome.html
@@ -8,7 +8,13 @@
 </ion-header>
 
 <ion-content class="page-welcome no-scroll">
-  <ion-slides class="welcome-slider" pager>
+  <div class="landing-background">
+    <!-- <div class="logo-container">
+      <img class="logo-img" src="assets/img/boq-logo-whight.png">
+    </div> -->
+
+  </div>
+  <!-- <ion-slides class="welcome-slider" pager>
     <ion-slide *ngFor="let slide of shopSliders">
       <img [src]="slide.image">
     </ion-slide>
@@ -24,10 +30,10 @@
       BOQ is a smart construction hub ,also BOQ supports huge service for building and construction materials.<br>
       All of these materials comes from a well-known companies and well-known distributers  
     </div>
-  </div>
+  </div> -->
 </ion-content>
 
 
-  <ion-footer class="clear-gap"  *ngIf="!ready">
+  <!-- <ion-footer class="clear-gap"  *ngIf="!ready">
   <progress-bar [progress]="loadProgress"></progress-bar>
-</ion-footer>
+</ion-footer> -->
