--- a/9ecomv3/src/pages/search/search.html
+++ b/9ecomv3/src/pages/search/search.html
@@ -9,7 +9,7 @@
    
     
       <div class=menu-img-container>
-          <img src="assets/img/small-logo.png"  class="menu-logo-img">
+          <img src="assets/img/logo-white.png"  class="menu-logo-img">
         </div>
 
     <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
