--- a/9ecomv3/src/pages/home/home.html
+++ b/9ecomv3/src/pages/home/home.html
@@ -39,7 +39,7 @@
 
 
 <div>
-  <div class="segment-header">Browse By supplier</div>
+  <div class="segment-header">Browse By Supplier</div>
   <ion-scroll scrollX="true" class="categoty-scroll">
     <div class="vertical-list" *ngFor="let item of vendorSlider"  >
       <div class="vendor-list-container"  (click)="vendor(item[0])">
