--- a/9ecomv3/src/pages/welcome/welcome.html
+++ b/9ecomv3/src/pages/welcome/welcome.html
@@ -9,9 +9,9 @@
 
 <ion-content class="page-welcome no-scroll">
   <div class="landing-background">
-    <!-- <div class="logo-container">
-      <img class="logo-img" src="assets/img/boq-logo-whight.png">
-    </div> -->
+    
+      <img class="logo-img" src="assets/img/thumbnail.png">
+    
 
   </div>
   <!-- <ion-slides class="welcome-slider" pager>
