home view update

--- a/9ecomv3/src/pages/search/search.html
+++ b/9ecomv3/src/pages/search/search.html
@@ -12,7 +12,7 @@
           <img src="assets/img/logo-white.png"  class="menu-logo-img">
         </div>
 
-    <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
+    <ion-searchbar placeholder="What Are You Looking For?" mode="md" (ionInput)="getItems($event)"></ion-searchbar>
   </ion-navbar> 
       
 
