--- a/9ecomv3/src/pages/sub-cate-list/sub-cate-list.html
+++ b/9ecomv3/src/pages/sub-cate-list/sub-cate-list.html
@@ -10,7 +10,7 @@
       <div class=menu-img-container>
           <img src="assets/img/logo-white.png"  class="menu-logo-img">
         </div>
-      <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
+      <ion-searchbar placeholder="What Are You Looking For?" mode="md" (ionInput)="getItems($event)"></ion-searchbar>
     
 
   </ion-navbar>
