landing page view update

--- a/9ecomv3/src/pages/welcome/welcome.html
+++ b/9ecomv3/src/pages/welcome/welcome.html
@@ -10,7 +10,8 @@
 <ion-content class="page-welcome no-scroll">
   <div class="landing-background">
     
-      <img class="logo-img" src="assets/img/thumbnail.png">
+      <img class="background-img" src="assets/img/landing.png">
+      <img class="logo-img" src="assets/img/logo-white.png">
     
 
   </div>
